--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,63 @@
+@import '@fontsource-variable/inter';
+@import '@fontsource/bangers';
+
 @import "tailwindcss";
+@plugin "daisyui";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --breakpoint-xs: 375px;
+  --breakpoint-sm: 534px;
+  --breakpoint-md: 640px;
+  --breakpoint-lg: 1072px;
+  --breakpoint-xl: 1520px;
+  --breakpoint-2xl: 1872px;
+
+  /* Custom Font */
+  --font-Inter: 'Inter Variable', sans-serif;
+  --font-Bangers: 'Bangers', cursive;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@plugin "daisyui" {
+  themes: all;
+  /* root: ":root";
+    include: ;
+    exclude: ;
+    prefix: ;
+    logs: true; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/* Responsive font sizes for different screen sizes */
+@media (min-width: 534px) {
+  html {
+    font-size: 14px;
+    font-family: 'Inter Variable', sans-serif;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@media (min-width: 640px) {
+  html {
+    font-size: 16px;
+    font-family: 'Inter Variable', sans-serif;
+  }
+}
+
+@media (min-width: 1072px) {
+  html {
+    font-size: 14px;
+    font-family: 'Inter Variable', sans-serif;
+  }
+}
+
+@media (min-width: 1520px) {
+  html {
+    font-size: 14px;
+    font-family: 'Inter Variable', sans-serif;
+  }
+}
+
+@media (min-width: 1872px) {
+  html {
+    font-size: 16px;
+    font-family: 'Inter Variable', sans-serif;
+  }
 }
